<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/register_title"
        android:textAllCaps="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="100sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_username"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_mail"
        android:inputType="textEmailAddress"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp" />

    <Button
        android:id="@+id/register"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:layout_marginLeft="115sp"
        android:layout_marginStart="115sp" />


</LinearLayout>